--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#435CE7</color>
+    <color name="colorPrimary">#435ce7</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#e7435c</color>
+    <color name="colorAccent_2">#423bff</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="link_blue">#1553fc</color>
     <color name="google_blue">#3D6EF2</color>
     <color name="github_dark">#464646</color>
+    <color name="fragment_background">#d6d6d6</color>
 </resources>
