--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="spinnerItemStyle" parent="@android:style/Widget.Material.Light.Spinner.Underlined">
+        <item name="android:textColor">#000000</item>
+    </style>
+
 </resources>
