--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/singleTaskCoordinatorLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -58,7 +59,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/memberWrapper"
+                android:id="@+id/taskMemberWrapper"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -75,15 +76,15 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <Switch
-                android:id="@+id/switchDone"
+            <CheckBox
+                android:id="@+id/checkBoxDone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10sp"
                 android:layout_marginTop="20sp"
-                android:layout_marginBottom="20sp"
-                android:layout_marginRight="20sp"
-                android:text="Task is completed" />
+                android:layout_marginRight="10sp"
+                android:buttonTint="@color/colorAccent_2"
+                android:text="Task Completed" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnTaskChat"
@@ -95,7 +96,7 @@
                 android:layout_marginBottom="20sp"
                 android:backgroundTint="@color/colorAccent"
                 android:text="Chat about task"
-                app:cornerRadius="5dp"/>
+                app:cornerRadius="5dp" />
         </LinearLayout>
 
     </ScrollView>
