--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -18,6 +18,7 @@
     </ScrollView>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/groupList"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
