--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#435ce7</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#e7435c</color>
-    <color name="colorAccent_2">#f70535</color>
+    <color name="colorAccent_2">#ff205f</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="link_blue">#1553fc</color>
