--- a/app/src/main/res/layout/user_row.xml
+++ b/app/src/main/res/layout/user_row.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/userRowLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:background="?android:attr/selectableItemBackground"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:visibility="visible">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profilePic"
@@ -25,12 +27,12 @@
         android:layout_marginStart="20sp"
         android:layout_marginEnd="20sp"
         android:layout_weight="1"
-        android:text="Member name"
-        android:textColor="@color/black"
-        android:textSize="16sp"
         android:ellipsize="end"
         android:maxEms="15"
-        android:maxLines="1"/>
+        android:maxLines="1"
+        android:text="Member name"
+        android:textColor="@color/black"
+        android:textSize="16sp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnMemberDelete"
