--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/homeCoordinatorLayout"
@@ -15,27 +16,7 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/fragment_background">
-
-            <com.google.android.material.tabs.TabItem
-                style="@style/Widget.MaterialComponents.TabLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="PROJECTS" />
-
-            <com.google.android.material.tabs.TabItem
-                style="@style/Widget.MaterialComponents.TabLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="GROUPS" />
-
-            <com.google.android.material.tabs.TabItem
-                style="@style/Widget.MaterialComponents.TabLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="CHATS" />
-
-        </com.google.android.material.tabs.TabLayout>
+            android:backgroundTint="@color/fragment_background" />
     </androidx.viewpager.widget.ViewPager>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -44,7 +25,8 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_add_white_24dp"
         app:fabSize="normal"
-        app:layout_anchor="@id/bottom_app_bar" />
+        app:layout_anchor="@id/bottom_app_bar"
+        android:visibility="invisible" />
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottom_app_bar"
@@ -52,7 +34,7 @@
         android:layout_height="56dp"
         android:layout_gravity="bottom"
         android:backgroundTint="@color/colorPrimary"
-        app:fabAlignmentMode="end"
-        app:hideOnScroll="true"/>
-
+        app:fabAlignmentMode="center"
+        app:hideOnScroll="true"
+        app:navigationIcon="@drawable/ic_menu_white_24dp"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
