--- a/app/src/main/res/layout/group_row.xml
+++ b/app/src/main/res/layout/group_row.xml
@@ -21,4 +21,16 @@
         android:maxLines="1"
         android:textColor="@color/black"
         android:textSize="24sp" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnOpenChat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|end"
+        android:layout_marginTop="5sp"
+        android:layout_marginRight="20sp"
+        android:layout_marginBottom="5sp"
+        android:backgroundTint="@color/colorAccent"
+        android:text="Open Chat"
+        app:cornerRadius="5dp" />
 </LinearLayout>
