--- a/app/src/main/res/layout/single_message_layout.xml
+++ b/app/src/main/res/layout/single_message_layout.xml
@@ -2,23 +2,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="15dp">
+    android:padding="5dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/sender_profile_pic"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/sender_name"
+        android:layout_alignStart="@+id/sender_name"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="7dp"
         android:src="@drawable/profile_pic" />
 
     <TextView
         android:id="@+id/incoming_message_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="25dp"
+        android:layout_below="@+id/sent_time"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="15dp"
         android:layout_toEndOf="@+id/sender_profile_pic"
         android:background="@drawable/incoming_message_box"
         android:padding="15dp"
@@ -29,8 +31,7 @@
         android:id="@+id/sender_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/incoming_message_text"
-        android:layout_alignTop="@+id/sender_profile_pic"
+        android:layout_marginBottom="10dp"
         android:text="TextView"
         android:textSize="16sp"
         android:textStyle="bold" />
@@ -39,9 +40,9 @@
         android:id="@+id/sent_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/sender_name"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="3dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="1dp"
         android:layout_toEndOf="@+id/sender_name"
         android:text="TextView" />
 
