--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -33,7 +33,7 @@
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
             android:layout_gravity="bottom"
@@ -44,7 +44,7 @@
             <EditText
                 android:id="@+id/txtMsg"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="9"
                 android:hint="Enter message"
                 android:padding="10dp" />
@@ -52,7 +52,7 @@
             <ImageButton
                 android:id="@+id/btnSend"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="56dp"
                 android:layout_weight="1"
                 android:src="@drawable/ic_send_white_24dp" />
 
